[metadata]
name = vyconfd
summary = Application config framework
description-file = README.rst
license = GPL
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Development Status :: 3 - Alpha,
    Framework :: Setuptools Plugin,
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = VyOS Team
author_email = vyos@vyos.org
home-page = https://bugzilla.vyos.org

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    vyconfd

[entry_points]
console_scripts =

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _
mapping_file = babel.cfg
output_file = vyconfd/locale/climate.pot
